--- a/packages/react-native-nitro-contacts/package.json
+++ b/packages/react-native-nitro-contacts/package.json
@@ -41,14 +41,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mrousavy/nitro.git"
+    "url": "git+https://github.com/enginbolat/react-native-nitro-contacts.git"
   },
-  "author": "Marc Rousavy <me@mrousavy.com> (https://github.com/mrousavy)",
+  "author": "Engin Bolat <engi.bolat@gmail.com> (https://github.com/enginbolat)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mrousavy/nitro/issues"
+    "url": "https://github.com/enginbolat/react-native-nitro-contacts/issues"
   },
-  "homepage": "https://github.com/mrousavy/nitro#readme",
+  "homepage": "https://github.com/enginbolat/react-native-nitro-contacts/blob/main/README.md",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
