--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -16,7 +16,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-nitro-modules": "*",
-    "react-native-nitro-contacts": "workspace:*",
+    "@enginnblt/react-native-nitro-contacts": "workspace:*",
     "@shopify/flash-list": "^1.7.0",
     "react-native-safe-area-context": "^5.4.0"
   },
