--- a/packages/react-native-nitro-contacts/package.json
+++ b/packages/react-native-nitro-contacts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-nitro-contacts",
-  "version": "0.0.2",
+  "name": "@enginnblt/react-native-nitro-contacts",
+  "version": "0.0.1",
   "description": "react-native-nitro-contacts",
   "main": "lib/index",
   "module": "lib/index",
