--- a/packages/react-native-nitro-contacts/package.json
+++ b/packages/react-native-nitro-contacts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enginnblt/react-native-nitro-contacts",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "react-native-nitro-contacts",
   "main": "index.js",
   "module": "lib/index",
@@ -57,9 +57,6 @@
   "expo": {
     "plugin": "./app.plugin.js"
   },
-  "dependencies": {
-    "react-native-nitro-modules": "^0.33.0"
-  },
   "devDependencies": {
     "@react-native/eslint-config": "0.83.0",
     "@types/react": "^19.1.03",
@@ -73,7 +70,8 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "@expo/config-plugins": ">=7.0.0"
+    "@expo/config-plugins": "*",
+    "react-native-nitro-modules": "*"
   },
   "peerDependenciesMeta": {
     "@expo/config-plugins": {
