--- a/packages/react-native-nitro-contacts/package.json
+++ b/packages/react-native-nitro-contacts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enginnblt/react-native-nitro-contacts",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "react-native-nitro-contacts",
   "main": "index.js",
   "module": "lib/index",
@@ -10,6 +10,7 @@
   "files": [
     "index.js",
     "src",
+    "scripts",
     "react-native.config.js",
     "lib",
     "nitrogen",
@@ -35,7 +36,8 @@
     "lint-ci": "eslint \"**/*.{js,ts,tsx}\" -f @jamesacarr/github-actions",
     "typescript": "tsc",
     "specs": "tsc --noEmit false && nitrogen --logLevel=\"debug\"",
-    "prepublishOnly": "npm run clean && npm run specs && npm run typescript"
+    "prepublishOnly": "npm run clean && npm run specs && npm run typescript",
+    "postinstall": "node scripts/inject-nitro-ios.js"
   },
   "keywords": [
     "react-native",
@@ -67,11 +69,13 @@
     "prettier": "^3.3.3",
     "typescript": "^5.8.3"
   },
+  "dependencies": {
+    "react-native-nitro-modules": "*"
+  },
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "@expo/config-plugins": "*",
-    "react-native-nitro-modules": "*"
+    "@expo/config-plugins": "*"
   },
   "peerDependenciesMeta": {
     "@expo/config-plugins": {
