--- a/packages/react-native-nitro-contacts/tsconfig.json
+++ b/packages/react-native-nitro-contacts/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "compilerOptions": {
     "composite": true,
+    "declaration": true,
+    "declarationMap": true,
     "outDir": "lib",
     "rootDir": "src",
     "allowUnreachableCode": false,
