feat: Configure example app for monorepo development and refactor `react-native-nitro-modules` integration by removing the auto-injection script and updating podspec dependencies.

--- a/apps/example/app.json
+++ b/apps/example/app.json
@@ -30,7 +30,7 @@
     },
     "plugins": [
       [
-        "react-native-nitro-contacts",
+        "@enginnblt/react-native-nitro-contacts",
         {
           "contactsPermissionText": "NitroContacts Example needs access to your contacts."
         }
