chore: Update example app dependencies, expand package keywords, and add Claude permissions.

--- a/packages/react-native-nitro-contacts/package.json
+++ b/packages/react-native-nitro-contacts/package.json
@@ -39,7 +39,19 @@
   },
   "keywords": [
     "react-native",
-    "nitro"
+    "react",
+    "nitro",
+    "nitro-modules",
+    "contacts",
+    "addressbook",
+    "phonebook",
+    "jsi",
+    "c++",
+    "ios",
+    "android",
+    "performance",
+    "fast",
+    "native-module"
   ],
   "repository": {
     "type": "git",
