--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -11,12 +11,13 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@enginnblt/react-native-nitro-contacts": "workspace:*",
+    "@shopify/flash-list": "^1.7.0",
     "expo": "~54.0.33",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "@enginnblt/react-native-nitro-contacts": "workspace:*",
-    "@shopify/flash-list": "^1.7.0",
+    "react-native-nitro-modules": "^0.33.9",
     "react-native-safe-area-context": "^5.4.0"
   },
   "devDependencies": {
